first_service.yml
apiVersion: v1
kind: Service
metadata:
  name: first-api-service
spec:
  selector:
    run: first-api
  ports:
    - protocol: TCP
      port: 4000
      targetPort: 8080
