second_service.yml
apiVersion: v1
kind: Service
metadata:
  name: second-api-service
spec:
  selector:
    run: second-api
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 8080
