gateway_test.yml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: test-gateway
spec:
  gatewayClassName: nginx
  listeners:
  - name: http
    protocol: HTTP
    port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: api-route
spec:
  parentRefs:
  - name: test-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /first
    backendRefs:
    - name: first-api-service
      port: 4000
  - matches:
    - path:
        type: PathPrefix
        value: /second
    backendRefs:
    - name: second-api-service
      port: 4001
